# navigator-frontend

./:  instrumentation.ts  .OLD.babelrc  .babelrc  .dockerignore  .env  .env.example  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .prettierrc  .size-limit.js  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.OLD  Dockerfile.dev  Makefile  README.md  custom.d.ts  debug-output.html  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  geographiesTypes.ts  i18n.js  instrumentation.ts  jest.config.ts  lighthouserc.desktop.js  lighthouserc.js  lighthouserc.mobile.js  middleware.ts  next.config.js  package-lock.json  package.json  playright.xml  playwright.config.ts  postcss.config.js  postcss.config.mjs  server.js  shipyard-cpr.yml  (+10 more)
.github/: .copilot-instructions.md  CODEOWNERS  dependabot.yml  funcs.sh  pull_request_template.md  retag-and-push.sh
.storybook/: main.ts  preview.ts  preview.tsx
.trunk/: trunk.yaml
bats/: README.md
build-scripts/: build-custom-app.sh
docs/: create-custom-app.md  lighthouse-disk-space.md  turn-on-ff-though-config.md
e2e/: .env.example  .gitignore  Dockerfile  README.md  browserstack.json  cypress.config.js  docker-compose.yml  package-lock.json  package.json
infra/: Pulumi.ccc-production.yaml  Pulumi.ccc-review.yaml  Pulumi.ccc-staging.yaml  Pulumi.cclw-production.yaml  (+16 more)
infra/resources/: app_runner_service.py  aws_env.py  cache_policy.py  cloudfront_distribution.py  cors_policy.py  dns.py  ecr_repository.py  ecs.py  ecs_cluster.py  ecs_express_service.py  github_actions_role.py  pyproject.toml  util.py  waf.py
(+1206 files in other folders)
