[project]
name = "resources"
version = "1.0.0"
description = "Common resources for Pulumi infra"
requires-python = ">=3.13,<3.14"
dependencies = ["pulumi", "pulumi-aws"]


[[project.authors]]
name = "Katy Baulch"
email = "katy@climatepolicyradar.org"

[tool.setuptools.packages.find]
where = [".."]          # look one level up (i.e. in navigator-frontend/infra/)
include = ["infra*"]